parser/yyparse.output
Terminals which are not used

   TOK_ROOT
   TOK_PERCENTID
   TOK_INTTYPE
   TOK_DOTIDENT
   TOK_METADATA_LIST
   TOK_PARATTR


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program source_filename
    3        | program target
    4        | program metadata_def
    5        | /* empty */

    6 source_filename: "source_filename" "=" TOK_STRING

    7 target: "target" target_type "=" TOK_STRING

    8 target_type: "datalayout"
    9            | "triple"

   10 metadata_def: "!" dotident "=" metadata_distinct "!{" metadata_list "}"

   11 metadata_list: metadata_list "," metadata_listitem
   12              | metadata_listitem
   13              | /* empty */

   14 metadata_listitem: "!" TOK_STRING
   15                  | "!" TOK_INT_LITERAL
   16                  | "null"

   17 metadata_distinct: "distinct"
   18                  | /* empty */

   19 dotident: dotident "."
   20         | dotident TOK_IDENT
   21         | dotident TOK_INT_LITERAL
   22         | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
TOK_ROOT (258)
TOK_STRING (259) 6 7 14
TOK_PERCENTID (260)
TOK_INTTYPE (261)
TOK_INT_LITERAL (262) 15 21
TOK_IDENT (263) 20
TOK_DOTIDENT (264)
TOK_METADATA_LIST (265)
TOK_PARATTR (266)
"source_filename" (267) 6
"!" (268) 10 14 15
"=" (269) 6 7 10
"." (270) 19
"target" (271) 7
"datalayout" (272) 8
"triple" (273) 9
"distinct" (274) 17
"!{" (275) 10
"}" (276) 10
"," (277) 11
"null" (278) 16


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
start (25)
    on left: 1, on right: 0
program (26)
    on left: 2 3 4 5, on right: 1 2 3 4
source_filename (27)
    on left: 6, on right: 2
target (28)
    on left: 7, on right: 3
target_type (29)
    on left: 8 9, on right: 7
metadata_def (30)
    on left: 10, on right: 4
metadata_list (31)
    on left: 11 12 13, on right: 10 11
metadata_listitem (32)
    on left: 14 15 16, on right: 11 12
metadata_distinct (33)
    on left: 17 18, on right: 10
dotident (34)
    on left: 19 20 21 22, on right: 10 19 20 21


state 0

    0 $accept: . start $end

    $default  reduce using rule 5 (program)

    start    go to state 1
    program  go to state 2


state 1

    0 $accept: start . $end

    $end  shift, and go to state 3


state 2

    1 start: program .
    2 program: program . source_filename
    3        | program . target
    4        | program . metadata_def

    "source_filename"  shift, and go to state 4
    "!"                shift, and go to state 5
    "target"           shift, and go to state 6

    $default  reduce using rule 1 (start)

    source_filename  go to state 7
    target           go to state 8
    metadata_def     go to state 9


state 3

    0 $accept: start $end .

    $default  accept


state 4

    6 source_filename: "source_filename" . "=" TOK_STRING

    "="  shift, and go to state 10


state 5

   10 metadata_def: "!" . dotident "=" metadata_distinct "!{" metadata_list "}"

    $default  reduce using rule 22 (dotident)

    dotident  go to state 11


state 6

    7 target: "target" . target_type "=" TOK_STRING

    "datalayout"  shift, and go to state 12
    "triple"      shift, and go to state 13

    target_type  go to state 14


state 7

    2 program: program source_filename .

    $default  reduce using rule 2 (program)


state 8

    3 program: program target .

    $default  reduce using rule 3 (program)


state 9

    4 program: program metadata_def .

    $default  reduce using rule 4 (program)


state 10

    6 source_filename: "source_filename" "=" . TOK_STRING

    TOK_STRING  shift, and go to state 15


state 11

   10 metadata_def: "!" dotident . "=" metadata_distinct "!{" metadata_list "}"
   19 dotident: dotident . "."
   20         | dotident . TOK_IDENT
   21         | dotident . TOK_INT_LITERAL

    TOK_INT_LITERAL  shift, and go to state 16
    TOK_IDENT        shift, and go to state 17
    "="              shift, and go to state 18
    "."              shift, and go to state 19


state 12

    8 target_type: "datalayout" .

    $default  reduce using rule 8 (target_type)


state 13

    9 target_type: "triple" .

    $default  reduce using rule 9 (target_type)


state 14

    7 target: "target" target_type . "=" TOK_STRING

    "="  shift, and go to state 20


state 15

    6 source_filename: "source_filename" "=" TOK_STRING .

    $default  reduce using rule 6 (source_filename)


state 16

   21 dotident: dotident TOK_INT_LITERAL .

    $default  reduce using rule 21 (dotident)


state 17

   20 dotident: dotident TOK_IDENT .

    $default  reduce using rule 20 (dotident)


state 18

   10 metadata_def: "!" dotident "=" . metadata_distinct "!{" metadata_list "}"

    "distinct"  shift, and go to state 21

    $default  reduce using rule 18 (metadata_distinct)

    metadata_distinct  go to state 22


state 19

   19 dotident: dotident "." .

    $default  reduce using rule 19 (dotident)


state 20

    7 target: "target" target_type "=" . TOK_STRING

    TOK_STRING  shift, and go to state 23


state 21

   17 metadata_distinct: "distinct" .

    $default  reduce using rule 17 (metadata_distinct)


state 22

   10 metadata_def: "!" dotident "=" metadata_distinct . "!{" metadata_list "}"

    "!{"  shift, and go to state 24


state 23

    7 target: "target" target_type "=" TOK_STRING .

    $default  reduce using rule 7 (target)


state 24

   10 metadata_def: "!" dotident "=" metadata_distinct "!{" . metadata_list "}"

    "!"     shift, and go to state 25
    "null"  shift, and go to state 26

    $default  reduce using rule 13 (metadata_list)

    metadata_list      go to state 27
    metadata_listitem  go to state 28


state 25

   14 metadata_listitem: "!" . TOK_STRING
   15                  | "!" . TOK_INT_LITERAL

    TOK_STRING       shift, and go to state 29
    TOK_INT_LITERAL  shift, and go to state 30


state 26

   16 metadata_listitem: "null" .

    $default  reduce using rule 16 (metadata_listitem)


state 27

   10 metadata_def: "!" dotident "=" metadata_distinct "!{" metadata_list . "}"
   11 metadata_list: metadata_list . "," metadata_listitem

    "}"  shift, and go to state 31
    ","  shift, and go to state 32


state 28

   12 metadata_list: metadata_listitem .

    $default  reduce using rule 12 (metadata_list)


state 29

   14 metadata_listitem: "!" TOK_STRING .

    $default  reduce using rule 14 (metadata_listitem)


state 30

   15 metadata_listitem: "!" TOK_INT_LITERAL .

    $default  reduce using rule 15 (metadata_listitem)


state 31

   10 metadata_def: "!" dotident "=" metadata_distinct "!{" metadata_list "}" .

    $default  reduce using rule 10 (metadata_def)


state 32

   11 metadata_list: metadata_list "," . metadata_listitem

    "!"     shift, and go to state 25
    "null"  shift, and go to state 26

    metadata_listitem  go to state 33


state 33

   11 metadata_list: metadata_list "," metadata_listitem .

    $default  reduce using rule 11 (metadata_list)
